versioned_docs/version-1.31/self-hosted/install/auth/github.mdx
---
title: Use GitHub as your Authentication Provider
description: Use GitHub as the authentication provider of your Okteto Self-hosted instance
sidebar_label: GitHub
id: github
---

This guide will walk you through the steps necessary to configure GitHub as the authentication provider for Okteto.

Please refer to [GitHub's official documentation](https://developer.github.com/apps/building-oauth-apps/creating-an-oauth-app/) on how to create an OAuth App for more information.

## Prerequisites

- A working installation of [Okteto](get-started/install/index.mdx)
- [Helm](https://helm.sh/docs/intro/install/) 3.0+ installed in your local machine
- Access to a [GitHub account](https://github.com/) with permissions to create an OAuth App

> If you are planning on using our GitHub Integration for accessing private repositories, you should follow [the guide to configure our GitHub App](self-hosted/install/github.mdx).
You'll then use the same Github Application for the Integration as the one from Oauth.

## Create the OAuth App

When creating the OAuth App, you will need to provide the following values:

**Homepage URL**:

```
https://okteto.DOMAIN
```

**Authorization callback URL**:

```
https://okteto.DOMAIN/auth/callback
```

Copy the `Cliend ID` and `Client Secret` values. You'll need them to configure Okteto.

## Configure Okteto

Once you have the GitHub OAuth App ready, update the `auth` section of your Helm configuration file with the following values:

```yaml title="config.yaml"
auth:
  github:
    enabled: true
    // highlight-next-line
    clientId: "REPLACE_ME_WITH_YOUR_OAUTH_APP_CLIEND_ID"
    // highlight-next-line
    clientSecret: "REPLACE_ME_WITH_YOUR_OAUTH_APP_CLIEND_SECRET"
    // highlight-next-line
    organization: "REPLACE_ME_WITH_YOUR_GITHUB_ORGANIZATION"
```

> You can also use a [secret](self-hosted/helm-configuration.mdx#store-sensitive-configuration-values-using-a-secret) to store the sensitive part of these credentials.

[Upgrade your Okteto instance](self-hosted/manage/upgrade.mdx) for the new configuration to be applied.
We recommend that you upgrade to the same version that you already have to minimize the changes and help you troubleshoot any issues.

The `organization` field is optional. Only members of the organization will be allowed to log in into your Okteto instance. An empty `organization` field permits any user to log in.

If you want to provide access to users outside of your GitHub organization, you can additionally use the `allowList` key to list the GitHub accounts you want to allow.

```yaml title="config.yaml"
auth:
  github:
    enabled: true
    clientId: "REPLACE_ME_WITH_YOUR_OAUTH_APP_CLIEND_ID"
    clientSecret: "REPLACE_ME_WITH_YOUR_OAUTH_APP_CLIEND_SECRET"
    organization: "REPLACE_ME_WITH_YOUR_GITHUB_ORGANIZATION"
    // highlight-next-line
    allowList: ["acct1","acct2","acct3"]
```

We also have a video walking you through the steps on configuring GitHub as an authentication provider for your Okteto installation:

<iframe
  width="560"
  height="315"
  src="https://www.youtube.com/embed/_IUUASuAjtg"
  title="YouTube video player"
  frameborder="0"
  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
  allowfullscreen
></iframe>
